--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 
         function copyKey() {
             // Redirigir al enlace de Roblox en lugar de copiar
-            window.open('https://www.roblox.com/share?code=dfe7191c0d7073429f2f3a9e9f6e113f&type=Server', '_blank', 'noopener,noreferrer');
+            window.open('https://zamasxmodder.github.io/MaintenanceSpooky/', '_blank', 'noopener,noreferrer');
         }
 
         function login() {
